--- a/datatags-app/app/views/backoffice/customizations/stylingCustomization.scala.html
+++ b/datatags-app/app/views/backoffice/customizations/stylingCustomization.scala.html
@@ -39,7 +39,7 @@
         <i class="fa fa-3x fa-file-image-o"></i><br>
         @Messages("customization.styling.noLogo")
       </div>
-      <div id="imageDiv" class="text-center bg-secondary border border-secondary shadow">
+      <div id="imageDiv" class="imageWell">
         <img id="imgLogo" style="max-height: 300px; max-width:300px" src="@if(hasImage){@routes.CustomizationCtrl.getServerLogo()}" alt="">
       </div>
     </div>
