--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -27,6 +27,18 @@ h1, h2, h3 {
   text-align: center;
 }
 
+.imageWell {
+  text-align: center;
+  box-shadow: .5rem 1rem rgba(0,0,0,.15);
+  border: 1px solid black;
+  padding: 1em;
+  background-color: #eee;
+  background-image: linear-gradient(45deg, gray 25%, transparent 25%, transparent 75%, gray 75%, gray),
+  linear-gradient(45deg, gray 25%, transparent 25%, transparent 75%, gray 75%, gray);
+  background-size: 60px 60px;
+  background-position: 0 0, 20px 20px;
+}
+
 .btn-txt {
   height: 1rem;
   padding: 0 .5rem;
@@ -861,6 +873,8 @@ ul.localizations {
   font-family: Menlo, Inconsolata, 'Courier New', monospace;
   font-size: .8em;
   color: rgba(41, 41, 82, 1);
+  display: inline-block;
+  direction: ltr;
 }
 
 .requestedInterview-welcomeMessage {
