--- a/datatags-app/app/views/templates/bsBase.scala.html
+++ b/datatags-app/app/views/templates/bsBase.scala.html
@@ -27,7 +27,7 @@
     <script src="@routes.Assets.versioned("lib/popper.js/umd/popper.js")"></script>
     <script src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.min.js")"></script>
     <script src="@routes.Assets.versioned("lib/sweetalert/sweetalert.min.js")"></script>
-    <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
+    <script type="text/javascript" src="@routes.Application.javascriptRoutes?@controllers.Application.jsRoutesHash"></script>
     <script src="@routes.Assets.versioned("js/JsUtils.js")"></script>
     <script src="@routes.Assets.versioned("js/UiUtils.js")"></script>
     <script src="@routes.Assets.versioned("js/Informationals.js")"></script>
