--- a/datatags-app/app/views/interview/rejected.scala.html
+++ b/datatags-app/app/views/interview/rejected.scala.html
@@ -53,9 +53,9 @@
 
       @session.requestedInterview match {
         case Some(reqInt) => {
-          <p>@reqInt.returnButtonTitle</p>
+          <p>@reqInt.data.returnButtonTitle</p>
           <form action="@routes.RequestedInterviewCtrl.unacceptableDataset(reqInt.key, node.getReason)" method="POST">
-            <button class="btn btn-primary" type="submit">@reqInt.returnButtonText</button>
+            <button class="btn btn-primary" type="submit">@reqInt.data.returnButtonText</button>
           </form>
         }
         case None => {
