--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -21,6 +21,23 @@
 }
 }
 
+@continueRow = {
+  <div class="row my-2">
+    <div class="col text-center">
+      @session.requestedInterview match {
+        case Some(reqInt) => {
+          <p>@reqInt.data.returnButtonTitle</p>
+                  <form action="@routes.RequestedInterviewCtrl.postBackTo(reqInt.key)" method="POST">
+                    <button class="btn btn-primary" type="submit">@reqInt.data.returnButtonText</button>
+                  </form>
+        }
+        case None => {
+          <a href="@routes.InterviewCtrl.showStartInterview(session.kit.md.id.modelId, session.kit.md.id.version)" class="btn btn-primary">@Messages("interview.startAgain")</a>
+        }
+      }
+    </div>
+  </div>
+}
 
 @templates.publicPages("Interview Completed", views.PublicSection.Interview, scripts, extraHead) {
   <div class="row">
@@ -74,6 +91,9 @@
       </div>
     </div>
   </div>
+
+  @continueRow
+
   <div class="row my-2">
     <div class="col">
       <div class="card">
@@ -84,21 +104,8 @@
         @comps.answerHistory(session.answerHistory, session.kit.md.id, false, session.kit.serializer, session.localization)
         </div>
       </div></div></div>
-  <div class="row my-2">
-    <div class="col text-center">
-      @session.requestedInterview match {
-        case Some(reqInt) => {
-          <p>@reqInt.data.returnButtonTitle</p>
-          <form action="@routes.RequestedInterviewCtrl.postBackTo(reqInt.key)" method="POST">
-            <button class="btn btn-primary" type="submit">@reqInt.data.returnButtonText</button>
-          </form>
-        }
-        case None => {
-          <a href="@routes.InterviewCtrl.showStartInterview(session.kit.md.id.modelId, session.kit.md.id.version)" class="btn btn-primary">@Messages("interview.startAgain")</a>
-        }
-      }
-    </div>
-  </div>
+
+ @continueRow
 }
 
 
