--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -27,7 +27,7 @@
       @session.requestedInterview match {
         case Some(reqInt) => {
           <p>@reqInt.data.returnButtonTitle</p>
-                  <form action="@routes.RequestedInterviewCtrl.postBackTo(reqInt.key)" method="POST">
+                  <form action="@routes.RequestedInterviewCtrl.reportInterviewResults()" method="POST">
                     <button class="btn btn-primary" type="submit">@reqInt.data.returnButtonText</button>
                   </form>
         }
@@ -103,8 +103,9 @@
         <div class="card-body">
         @comps.answerHistory(session.answerHistory, session.kit.md.id, false, session.kit.serializer, session.localization)
         </div>
-      </div></div></div>
-
+      </div>
+    </div>
+  </div>
  @continueRow
 }
 
