--- a/datatags-app/app/assets/css/rtl.less
+++ b/datatags-app/app/assets/css/rtl.less
@@ -107,3 +107,15 @@ nav.navbar ul.nav {
   }
 }
 
+
+table.questionTable {
+  th.sectionEnd {
+    background-color: #EEE;
+    text-align: left;
+    font-size: smaller;
+    font-weight: normal;
+    font-style: italic;
+    border-bottom: 1px solid black;
+    padding-right: 1em;
+  }
+}
