--- a/datatags-app/app/views/comps/locVersionMedataTable.scala.html
+++ b/datatags-app/app/views/comps/locVersionMedataTable.scala.html
@@ -31,7 +31,7 @@
         <td>@bmd.getKeywords.asScala.mkString(", ")</td>
       </tr>
     }
-    @if( bmd.getReferences.size > 0 ) {
+    @if( md.getReferences.size > 0 ) {
       <tr>
         <th>@Messages("interview.version.meta.references")</th>
         <td>
