JDK11, PoMo upgrade, sticky footer

--- a/datatags-app/app/assets/css/questionCodebook.less
+++ b/datatags-app/app/assets/css/questionCodebook.less
@@ -4,6 +4,10 @@ h1 {
   margin: 1em 0;
 }
 
+h2 {
+  text-align: center;
+}
+
 table.metadataTable {
 }
 
@@ -51,8 +55,14 @@ span.questionNum {
   box-shadow: none;
   background-color: transparent;
   font-weight: bold;
+  a {
+    text-decoration: none;
+  }
 }
 
 span.questionId {
   font-family: "Source Code Pro", "Monaco", "Ubuntu Mono Regular", "Lucida Console", monospace;
+  a {
+    text-decoration: none;
+  }
 }
