--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -1,5 +1,18 @@
 @import "globals.less";
 
+// Sticky footer
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+footer {
+  margin-top: auto;
+}
+// /sticky footer
+
+
 h1, h2, h3 {
   text-shadow: 0 1px 1px rgba(0,0,0,0.25);
 }
@@ -597,7 +610,6 @@ ul.image-links {
 
 footer {
   direction: ltr;
-  margin-top: 2em;
   padding: 2em 0;
   background-color: rgba(219, 219, 219, 0.6);
   font-size: 0.8em;
@@ -703,7 +715,6 @@ footer {
 }
 
 .allQuestions {
-
   .node {
     border-radius: 0.5em;
     border: 1px solid rgba(0,0,0,.5);
@@ -719,9 +730,7 @@ footer {
     background-color: rgba(0,0,128,.1);
   }
 
-  .call {
-
-  }
+  .call {}
 
   .question {
     display: list-item;
