Links in question panels are much clearer (closes #121)

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -185,6 +185,20 @@ h1, h2, h3 {
       }
     }
   }
+  .card-body {
+    a {
+      text-decoration: underline;
+      color: blue;
+
+      &:hover {
+        background-color: rgba(255,255,0,.4);
+      }
+      &:active {
+        background-color: rgba(255,255,0,.8);
+        color: #080;
+      }
+    }
+  }
 }
 
 .author {
