--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -981,12 +981,16 @@ details:open {
   background-color: #2aabd2;
 }
 
+
+.pageTitleRow-row {
+  border-bottom: 1px solid rgba(0,0,0,.1);
+  margin: 1em 0;
+}
+
 .pageTitleRow-ctnr {
   display: flex;
   flex-direction: row;
   flex-flow: nowrap;
-  border-bottom: 1px solid rgba(0,0,0,.1);
-  margin: 1em 0;
 
   h1 {
     flex-grow: 1;
