--- a/SamplePoMoSClientApp/samplepomosclientapp/app/views/index.scala.html
+++ b/SamplePoMoSClientApp/samplepomosclientapp/app/views/index.scala.html
@@ -1,103 +1,92 @@
-@(form:Form[InterviewRequestData])
+@()
 
-@errs(fName:String)={
-@if( form(fName).errors.nonEmpty ){
-  <ul class="errors">
-  @for( e <- form(fName).errors ){
-    <li>@e.messages.mkString(", ")</li>
-  }
-  </ul>
-}
-}
-
-@fval(fName:String, defVal:String)={@form(fName).value.getOrElse(defVal).trim}
-
-@main("Sample PoMoS Client App") {
-  <h1>Sample PolicyModel Server Client</h1>
-  <p>
-    This is a sample application that requests an interview from a PolicyModels server, and displays the interview result.
-    For this to work, you'll need a PolicyModels Server running, and an IP address that server can send the results back to.
-  </p>
-  <hr>
-  @if( form.hasGlobalErrors ) {
-    <ul class="errors">
-    @for( err <- form.globalErrors ) {
-      <li>@err.messages.mkString(", ")<li>
-      }
-    </ul>
-  }
-  <div id="queryArea">
-    This area will be updated as you input data into the fields on the left.<br>
-    Endpoint URL:
-    <pre><code id="endpointUrl"></code></pre>
-
-    JSON to <code>POST</code>:
-    <pre><code id="payload">
-      {
-      hello: world
-      }
-    </code></pre>
-  </div>
-  <form action="" method="POST">
-    <fieldset>
-      <legend>Inter-app Communication</legend>
-
+@main("Sample PoMoS Client App", "twoColumns") {
+  <header>
+    <h1>Sample PolicyModel Server Client</h1>
+    <p>
+      This is a sample application that requests an interview from a PolicyModels server, and displays the interview result.
+      For this to work, you'll need a PolicyModels Server running, and an IP address that server can send the results back to.
+    </p>
+  </header>
+  <div class="controls">
+    <h2>Controls</h2>
+    <section>
       <label for="fldServerAddress">PolicyModels Server</label>
-      <input type="text" name="serverAddress" id="fldServerAddress" value="@fval("serverAddress","http://localhost:9000")">
+      <input type="text" name="serverAddress" id="fldServerAddress" value="http://localhost:9000">
       <small>Address of the PolicyModels server (URL)</small>
-      @errs("serverAddress")
-      <br>
+    </section>
 
-      <label for="fldCallbackURL">Return URL</label>
-      <input type="text" name="callbackURL" id="fldCallbackURL" autocomplete="off" value="">
-      <small>
-        The URL where the PolicyModels Server will <code>POST</code> the results to.
-        It is possible to add parameters to this URL address so that the requesting server
-        can associate returned interview results with its internal state.
-      </small>
-      @errs("callbackURL")
-      <br>
+    <section>
+      <h3>List Available Models</h3>
+      <button type="button" class="httpButton" onclick="listModels()">GET</button> <code>/api/1/models/</code>
+    </section>
+
+    <section>
+      <h3>List Model Versions</h3>
+      <button type="button" class="httpButton" onclick="listVersions()">GET</button><code id="codeListVersions"> /api/1/models/<input class="httpField" style="width:10em" id="livModelId">/</code>
+    </section>
+
+    <section>
+      <h3>Model version info</h3>
+      <button type="button" class="httpButton" onclick="versionInfo()">GET</button><code id="codeListVersions"> /api/1/models/<input class="httpField" style="width:10em" id="mviModelId">/<input type="number" min="1" class="httpField" style="width:10em" id="mviVersion">/</code>
+    </section>
+
+    <section>
+      <h3>Request Interview</h3>
+      <p>
+        Newest version:<br><br>
+        <button type="submit" class="httpButton" onclick="requestInterviewNewest()">POST</button><code> /api/1/models/<input class="httpField" style="width:10em" id="rinModelId">/requests </code>
+      </p>
+      <p>
+        Specific version:<br><br>
+        <button type="submit" class="httpButton" onclick="requestInterviewSpecific()">POST</button><code> /api/1/models/<input class="httpField" style="width:10em" id="risModelId">/<input class="httpField" type="number" style="width:10em" id="risModelVersion">/requests </code>
+      </p>
+
+      <div id="interviewReady">
+        Interview ready at:
+        <a href="" id="interviewReadyHref"></a>
+      </div>
+
+      <fieldset>
+        <legend>Payload (JSON)</legend>
+
+        <label for="fldCallbackURL">callbackURL</label>
+        <input type="text" name="callbackURL" id="fldCallbackURL" autocomplete="off" value="">
+        <small>
+          The URL where the PolicyModels Server will <code>POST</code> the results to.
+          It is possible to add parameters to this URL address so that the requesting server
+          can associate returned interview results with its internal state.
+        </small>
+        <br>
 
 
-      <label for="fldModelId">Model ID</label>
-      <input type="text" name="modelId" id="fldModelId" value="@fval("modelId","")">
-      <small>Id of the model the user will interview with. A URL-friendly string.</small>
-      @errs("modelId")
-      <br>
+        <label for="fldLocalization">localization</label>
+        <input type="text" name="modelId" id="fldLocalization">
+        <small>Optional - the localization to use.</small>
+        <br>
 
-      <label for="fldModelVersion">Model Version</label>
-      <input type="number" name="modelVersion" id="fldModelVersion" value="@fval("modelVersion","")">
-      <small>The version number of the model we want the user to interview with.</small>
-      @errs("modelVersion")
-      <br>
-    </fieldset>
+        <label for="fldMessage">Message</label>
+        <input name="fldMessage" id="fldMessage">
+        <small>Optional - messages to the users before the interview begins. Currently ignored, future versions will display it.</small>
+        <br>
 
-    <fieldset>
-      <legend>Interview Customization</legend>
-      <label for="fldTitle">Interview Title</label>
-      <input type="text" name="title" width="80" id="fldTitle" value="@fval("fldTitle","Invited Interview")">
-      <small>Title to show the user when they arrive at the interview</small>
-      @errs("fldTitle")
-      <br>
+        <label for="fldRbTitle">Return button title</label>
+        <input  name="fldRbTitle" id="fldRbTitle" value="The interview is complete, let's continue">
+        <small>Title to appear on above the button that submits interview results.</small>
 
-      <label for="fldMessage">Interview Message</label>
-      <textarea name="message" id="fldMessage" cols="30" rows="3">@fval("fldMessage","Welcome to an invited interview. Once you finish it, the results will be returned to the system that sent you here.")</textarea>
-      <small>Message to show the user when they arrive at the interview</small>
-      @errs("fldMessage")
-      <br>
+        <label for="fldRbText">Return button text</label>
+        <input  name="fldRbText" id="fldRbText" value="Submit Results">
+        <small>Title to appear on above the button that submits interview results.</small>
+        <br>
+      </fieldset>
+    </section>
 
-      <label for="fldReturnButtonTitle">Return Button Title</label>
-      <input type="text" name="returnButtonTitle" id="fldReturnButtonTitle" value="@fval("returnButtonTitle","All done! Click the button below to report the results and go back.")">
-      <small>Title to show <em>above</em> the "return" button at the end of the interview</small>
-      @errs("returnButtonTitle")
-      <br>
-
-      <label for="fldReturnButtonText">Return Button Text</label>
-      <input type="text" name="returnButtonText" id="fldReturnButtonText" value="@fval("returnButtonText","Back to SampleApp")">
-      <small>Title to show <em>on</em> the "return" button at the end of the interview</small>
-      @errs("returnButtonText")
-    </fieldset>
-
-    <button type="submit" class="bigButton">Request Interview</button>
-  </form>
+  </div>
+  <div class="consoleCtnr">
+    <h2>Console</h2>
+    <button onclick="consoleClean()" style="float:right">Clear</button>
+    <div>Results will appear below.</div>
+    <div id="console">
+    </div>
+  </div>
 }
