start merging the client with testing the api's

--- a/datatags-app/app/views/comps/tagValue.scala.html
+++ b/datatags-app/app/views/comps/tagValue.scala.html
@@ -48,6 +48,7 @@
   </div>  
 }
 
+@*todo shady use*@
 @renderValue( value:AbstractValue ) = {
     @value match {
         case v:AtomicValue => {@atomicValue(v)}
